# MyRag

./: .agent.md  .coverage.MacBook-Pro-M1.local.79523.XcruUzOx  .env.example  .env.template  .gitignore  .mcp.json  CLAUDE.md  CURRENT_STATUS.md  ChangeLog.md  IMPLEMENTATION_SUMMARY_4.2.md  IMPLEMENTATION_SUMMARY_FINAL.md  LICENSE  Makefile  README.md  VECTOR_RETRIEVAL_IMPLEMENTATION.md  coverage.xml  debug_test.py  deployment_config.yaml  main.py  microsoft-graphrag-integration-plan.md  mkdocs.yml  pyproject.toml  pytest-all.xml  pytest-chinese.xml  pytest-integration.xml  pytest-unit.xml  run_test.py  simple_test.py  test_chinese_embedding_simple.py  test_fail.txt  test_graphrag_fix.py  test_graphrag_integration.py  test_indexer_init.py  test_modified_indexer.py  test_performance_simple.py  test_result.txt  test_simple.py  test_simple_query_api.py  verify_requirements.py
.claude/: settings.local.json
.github/workflows/: ci.yml  test.yml
.kilocode/rules/: product.md  tech.md
.kiro/steering/: structure.md  tech.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  development_commands.md  project_overview.md
config/: README.md  chinese_processing_config.yaml  dev.yaml  graphrag_settings.yaml  performance_optimization.yaml  prod.yaml  quality_gate.yaml  settings.yaml.example
docs/: README.md  api_index.md  api_models_reference.md  api_usage_guide.md  architecture_design.md  contributing_guide.md  documentation_validation_report.md  examples_and_tutorials.md  getting_started.md  index.md  installation_guide.md  navigation.md  performance_deployment_guide.md  performance_optimization.md  task_12_completion_report.md  test_automation.md  troubleshooting_guide.md
docs/api/: simple_query_api.md
evaluation_results/: quick_benchmark_report.json
examples/: chinese_embedding_demo.py  config_demo.py  embedding_performance_demo.py  embedding_service_demo.py  graphrag_workflow_examples.py  performance_optimization_example.py
examples/graphrag_test/: settings.yaml
input/: hello.txt  test.txt
logs/: .gitkeep
logs/model_usage/: usage_2025-08-02.jsonl
scripts/: backup_recovery.py  chinese_quality_validation.py  deploy_production.py  generate_test_report.py  init_test_data.py  monitoring_tools.py  performance_stress_test.py  quality_gate.py  run_system_tests.py  run_test_automation.py  system_integration_test.py  test_data_manager.py  test_notifier.py  validate_performance_system.py
src/chinese_graphrag/: __init__.py
test_results/: system_integration_test_report.md
tests/: __init__.py  conftest.py  test_config_system.py  test_data_manager.py  test_exception_handling.py  test_monitoring_system.py  test_utils.py
tests/integration/: test_chinese_features.py  test_end_to_end.py  test_performance.py
tests/performance/: test_performance_integration.py
tests/test_config/: __init__.py  test_loader.py  test_models.py  test_strategy.py
tests/test_data/: sample_ai.md  sample_ml.txt  (+1 more)
(+122 files in other folders)
